:bug: Fixed name animation on safari.

--- a/src/VerticalBar/Rect/Rect.module.scss
+++ b/src/VerticalBar/Rect/Rect.module.scss
@@ -9,6 +9,8 @@
 .name {
   font-size: 1.4rem;
   font-weight: bold;
+}
+.nameG {
   transition: opacity var(--speed), transform var(--speed);
   will-change: transform, opacity;
 
